fix description on small screens

--- a/statics/css/main.css
+++ b/statics/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0 auto;
   max-width: 50em;
   font-family: "Helvetica", "Arial", sans-serif;
-  padding: 2em 2em;
+  padding: 3em 2em;
   color: #555;
 }
 
@@ -155,7 +155,6 @@ nav {
 
 
 .flags-icons {
-  margin-top: 0.45em;
   margin-left: auto;
 }
 
@@ -188,6 +187,18 @@ footer {
   nav>a {
     display: block;
     padding: 5px;
+  }
+
+  header h1 {
+    font-size: large;
+  }
+
+  header h2 {
+    font-size: medium;
+  }
+
+  header ul {
+    padding-left: 1em;
   }
 
   .article-title {
